--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -110,6 +110,7 @@ jobs:
            node_modules
            **/node_modules
            ~/.cache/Cypress
+           ~/.cache/puppeteer
           key: ${{ runner.os }}-yarn-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
       - run: yarn install --immutable
         if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -154,6 +155,7 @@ jobs:
            node_modules
            **/node_modules
            ~/.cache/Cypress
+           ~/.cache/puppeteer
           key: ${{ runner.os }}-yarn-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
       - run: yarn install --immutable
         if: steps.yarn-cache.outputs.cache-hit != 'true'
