--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -30,11 +30,15 @@
     "access": "public"
   },
   "dependencies": {
-    "@patternfly/react-core": "^6.3.1"
+    "@patternfly/react-core": "^6.3.1",
+    "@patternfly/react-icons": "^6.3.1",
+    "clsx": "^2.1.0",
+    "react-grid-layout": "^1.5.1"
   },
   "peerDependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -46,8 +50,11 @@
     "@patternfly/patternfly-a11y": "^5.1.0",
     "@patternfly/react-code-editor": "^6.3.1",
     "@patternfly/react-table": "^6.3.1",
+    "@types/react-grid-layout": "^1.3.5",
     "monaco-editor": "^0.53.0",
+    "nodemon": "^3.0.0",
     "react-monaco-editor": "^0.59.0",
+    "react-router-dom": "^6.24.0",
     "rimraf": "^6.0.1"
   }
 }
