--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -37,8 +37,7 @@
   },
   "peerDependencies": {
     "react": "^18",
-    "react-dom": "^18",
-    "react-router-dom": "^6"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -54,7 +53,6 @@
     "monaco-editor": "^0.53.0",
     "nodemon": "^3.0.0",
     "react-monaco-editor": "^0.59.0",
-    "react-router-dom": "^6.24.0",
     "rimraf": "^6.0.1"
   }
 }
