--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -33,7 +33,7 @@
     "@patternfly/react-core": "^6.3.1",
     "@patternfly/react-icons": "^6.3.1",
     "clsx": "^2.1.0",
-    "react-grid-layout": "^1.5.1"
+    "react-grid-layout": "^2.2.2"
   },
   "peerDependencies": {
     "react": "^18",
@@ -45,11 +45,10 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@patternfly/documentation-framework": "^6.24.2",
-    "@patternfly/patternfly": "^6.3.1",
+    "@patternfly/patternfly": "^6.5.0-prerelease.33",
     "@patternfly/patternfly-a11y": "^5.1.0",
     "@patternfly/react-code-editor": "^6.3.1",
     "@patternfly/react-table": "^6.3.1",
-    "@types/react-grid-layout": "^1.3.5",
     "monaco-editor": "^0.53.0",
     "nodemon": "^3.0.0",
     "react-monaco-editor": "^0.59.0",
