--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -28,15 +28,22 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+      - name: Enable Corepack and install correct Yarn version
+        shell: bash
+        run: |
+          corepack enable
+          corepack prepare yarn@4.10.3 --activate
       - uses: actions/cache@v4
-        id: npm-cache
-        name: Load npm deps from cache
+        id: yarn-cache
+        name: Load yarn deps from cache
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-npm-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('package-lock.json') }}
-      - run: npm install --frozen-lockfile --legacy-peer-deps
+          path: |
+            node_modules
+            **/node_modules
+          key: ${{ runner.os }}-yarn-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
+      - run: yarn install --immutable
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-      - run: npm run build
+      - run: yarn build
         name: Build component groups
       - uses: actions/cache@v4
         id: docs-cache
@@ -44,15 +51,13 @@ jobs:
         with:
           path: '.cache'
           key: ${{ runner.os }}-v4-${{ hashFiles('yarn.lock') }}
-      - run: npm run build:docs
+      - run: yarn build:docs
         name: Build docs
-      - run: node .github/upload-preview.js packages/module/public
-        name: Upload docs
-        if: always()
-      - run: npx puppeteer browsers install chrome
-        name: Install Chrome for Puppeteer
-      - run: npm run serve:docs & npm run test:a11y
-        name: a11y tests
-      - run: node .github/upload-preview.js packages/module/coverage
-        name: Upload a11y report
-        if: always()
+      - name: Deploy preview to surge
+        if: env.SURGE_LOGIN != '' && env.SURGE_TOKEN != ''
+        run: |
+          npx surge packages/module/public --domain pr-${{ github.event.number }}-widgetized-dashboard.surge.sh
+      - name: Install Chrome for Puppeteer
+        run: npx puppeteer browsers install chrome
+      - name: a11y tests
+        run: yarn serve:docs & yarn test:a11y
