--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          if [[ ! -z "${GH_PR_NUM}" ]]; then 
+          if [[ ! -z "${GH_PR_NUM}" ]]; then
             echo "Checking out PR"
             git fetch origin pull/$GH_PR_NUM/head:tmp
             git checkout tmp
@@ -19,10 +19,12 @@ jobs:
           node-version: '20'
       - name: Enable Corepack
         shell: bash
-        run: corepack enable
+        run: |
+          corepack enable
+          corepack prepare yarn@4.10.3 --activate
       - uses: actions/cache@v4
         id: yarn-cache
-        name: Cache npm deps
+        name: Cache yarn deps
         with:
           path: |
            node_modules
@@ -48,7 +50,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          if [[ ! -z "${GH_PR_NUM}" ]]; then 
+          if [[ ! -z "${GH_PR_NUM}" ]]; then
             echo "Checking out PR"
             git fetch origin pull/$GH_PR_NUM/head:tmp
             git checkout tmp
@@ -58,10 +60,12 @@ jobs:
           node-version: '20'
       - name: Enable Corepack
         shell: bash
-        run: corepack enable
+        run: |
+          corepack enable
+          corepack prepare yarn@4.10.3 --activate
       - uses: actions/cache@v4
         id: yarn-cache
-        name: Cache npm deps
+        name: Cache yarn deps
         with:
           path: |
            node_modules
@@ -75,9 +79,6 @@ jobs:
         with:
           path: '.eslintcache'
           key: ${{ runner.os }}-lint-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
-      - name: Enable Corepack
-        shell: bash
-        run: corepack enable
       - name: ESLint
         run: yarn lint:js
       - name: MDLint
@@ -91,7 +92,7 @@ jobs:
       - uses: actions/checkout@v4
       # Yes, we really want to checkout the PR
       - run: |
-          if [[ ! -z "${GH_PR_NUM}" ]]; then 
+          if [[ ! -z "${GH_PR_NUM}" ]]; then
             echo "Checking out PR"
             git fetch origin pull/$GH_PR_NUM/head:tmp
             git checkout tmp
@@ -101,16 +102,16 @@ jobs:
           node-version: '20'
       - name: Enable Corepack
         shell: bash
-        run: corepack enable
+        run: |
+          corepack enable
+          corepack prepare yarn@4.10.3 --activate
       - uses: actions/cache@v4
         id: yarn-cache
-        name: Cache npm deps
+        name: Cache yarn deps
         with:
           path: |
            node_modules
            **/node_modules
-           ~/.cache/Cypress
-           ~/.cache/puppeteer
           key: ${{ runner.os }}-yarn-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
       - run: yarn install --immutable
         if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -120,7 +121,6 @@ jobs:
         with:
           path: |
             packages/*/dist
-            packages/react-styles/css
           key: ${{ runner.os }}-dist-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock', 'package.json', 'packages/*/*', '!packages/*/dist', '!packages/*/node_modules') }}
       - name: Build dist
         run: yarn build
@@ -136,7 +136,7 @@ jobs:
       - uses: actions/checkout@v4
       # Yes, we really want to checkout the PR
       - run: |
-          if [[ ! -z "${GH_PR_NUM}" ]]; then 
+          if [[ ! -z "${GH_PR_NUM}" ]]; then
             echo "Checking out PR"
             git fetch origin pull/$GH_PR_NUM/head:tmp
             git checkout tmp
@@ -146,15 +146,16 @@ jobs:
           node-version: '20'
       - name: Enable Corepack
         shell: bash
-        run: corepack enable
+        run: |
+          corepack enable
+          corepack prepare yarn@4.10.3 --activate
       - uses: actions/cache@v4
         id: yarn-cache
-        name: Cache npm deps
+        name: Cache yarn deps
         with:
           path: |
            node_modules
            **/node_modules
-           ~/.cache/Cypress
            ~/.cache/puppeteer
           key: ${{ runner.os }}-yarn-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
       - run: yarn install --immutable
@@ -165,7 +166,6 @@ jobs:
         with:
           path: |
             packages/*/dist
-            packages/react-styles/css
           key: ${{ runner.os }}-dist-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock', 'package.json', 'packages/*/*', '!packages/*/dist', '!packages/*/node_modules') }}
       - name: Build dist
         run: yarn build
