--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -26,19 +26,19 @@ jobs:
           node-version: '20'
       - name: Enable Corepack
         shell: bash
-        run: |
-          corepack enable
-          corepack prepare yarn@4.10.3 --activate
+        run: corepack enable
       - uses: actions/cache@v4
         id: yarn-cache
-        name: Cache yarn deps
+        name: Load Yarn cache
         with:
           path: |
-            node_modules
-            **/node_modules
-          key: ${{ runner.os }}-yarn-14-${{ secrets.CACHE_VERSION }}-${{ hashFiles('yarn.lock') }}
-      - run: yarn install --immutable
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+            .yarn/cache
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-cache-
+      - name: Install dependencies
+        shell: bash
+        run: yarn install --immutable --network-timeout 100000
       - run: yarn build
         name: Build component groups
       - uses: actions/cache@v4
